--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
-    "dev": "cd playground && yarn dev"
+    "dev": "cd playground && yarn dev",
+    "watch": "nodemon --watch src/* -x \"yarn build\""
   },
   "author": "",
   "license": "ISC",
@@ -21,9 +22,11 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "tslib": "^2.6.2"
+    "@headlessui/react": "^1.7.17",
+    "react-hook-form": "^7.49.2"
   }
 }
